# os-net-descriptor-passing

./: CMakeLists.txt  raii_socket.h  utils.cpp  utils.h
client/: client.cpp  client.h  main.cpp
server/: server.cpp  server.h
